--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -2,112 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>지뢰찾기</title>
-    <style>
-        body {
-            background-color: #f7f7f7;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        h1 {
-            font-size: 36px;
-            margin-bottom: 20px;
-            color: #383838;
-        }
-
-        .input-container {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-
-        .input-container label {
-            font-size: 18px;
-            margin-right: 10px;
-            color: #383838;
-        }
-
-        .input-container input[type="number"] {
-            font-size: 18px;
-            padding: 8px;
-            border: 2px solid #cccccc;
-            border-radius: 5px;
-            width: 100%;
-            max-width: 200px;
-        }
-
-        .button {
-            margin-top : 30px;
-            font-size: 20px;
-            padding: 10px 20px;
-            border-radius: 5px;
-            background-color: #5d5d5d;
-            color: #f7f7f7;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-        }
-
-        .button:hover {
-            background-color: #383838;
-        }
-
-        /* 추가된 게임 보드 스타일 */
-        .board {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-            gap: 10px;
-        }
-
-        .cell {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 50px;
-            height: 50px;
-            border: 2px solid #cccccc;
-            border-radius: 5px;
-            cursor: pointer;
-            user-select: none; /* 드래그 방지 */
-        }
-
-        /* 새로운 스타일 추가 */
-        .mine {
-            color: transparent;
-            text-shadow: none;
-        }
-
-        .blank {
-            color: transparent;
-            text-shadow: none;
-            background-color: #cccccc;
-            pointer-events: none; /* 클릭 방지 */
-        }
-
-        .number {
-            color: #0077ff; /* 원하는 색깔로 변경 */
-            pointer-events: none; /* 클릭 방지 */
-            font-weight : bold;
-        }
-
-        .stepped {
-            background-color : red;
-        }
-        .image-mine {
-            width: 50px;
-            height: 50px;
-        }
-    </style>
+    <title>지뢰밟기</title>
+    <link rel="stylesheet" th:href="@{/css/game.css}">
 </head>
 <body>
 <div class="container">
-    <h1>Minesweeper</h1>
+    <h2 th:if="${session.isVictory == false && session.isGameOver == false}">지뢰밟기</h2>
+    <h2 th:if="${session.isVictory}" style="color:green;">2김!</h2>
+    <h2 th:if="${session.isGameOver}" style="color:red;">망함!</h2>
     <div class="board">
         <table class="board">
             <tbody>
@@ -132,8 +34,8 @@
     </div>
 <!--    <img th:src="@{/images/mine.png}" class="image-mine"/>-->
     <!-- 승리 및 패배 메시지 추가 -->
-    <h2 th:if="${session.isVictory}" style="color:green;">2김!</h2>
-    <h2 th:if="${session.isGameOver}" style="color:red;">망함!</h2>
+    <img th:if=${session.isVictory} src="/images/victory.jpg" class="result_image" alt="Victory Image">
+    <img th:if=${session.isGameOver} src="/images/gameover.jpg" class="result_image" alt="GameOver Image">
 
     <a href="/" class="button">때려치기</a>
 </div>
@@ -144,14 +46,23 @@
         <input type="hidden" id="y" name="y">
         <input type="hidden" id="board" name="board" th:value="${#strings.arrayJoin(board, ',')}">
     </form>
-    <script>
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        var isVictory = /*[[${session.isVictory}]]*/ false;
+        var isGameOver = /*[[${session.isGameOver}]]*/ false;
+
         function clickCell(element) {
-            var x = element.getAttribute('data-x');
-            var y = element.getAttribute('data-y');
-            document.getElementById('x').value = x;
-            document.getElementById('y').value = y;
-            document.getElementById('cellClickForm').submit();
+            // 게임이 종료되지 않은 상태에서만 클릭 이벤트 처리
+            if (!isVictory && !isGameOver) {
+                var x = element.getAttribute('data-x');
+                var y = element.getAttribute('data-y');
+                document.getElementById('x').value = x;
+                document.getElementById('y').value = y;
+                document.getElementById('cellClickForm').submit();
+            }
         }
+        /*]]>*/
     </script>
 </body>
 </html>
