--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -8,8 +8,8 @@
 <body>
 <div class="container">
     <h2 th:if="${session.isVictory == false && session.isGameOver == false}">지뢰밟기</h2>
-    <h2 th:if="${session.isVictory}" style="color:green;">2김!</h2>
-    <h2 th:if="${session.isGameOver}" style="color:red;">망함!</h2>
+    <h2 th:if="${session.isVictory}" style="color:red;">뭐하시는 거죠? 왜 지뢰를 안밟으세요?</h2>
+    <h2 th:if="${session.isGameOver}" style="color:green;">축하합니다! 성공적으로 지뢰를 밟았습니다!</h2>
     <div class="board">
         <table class="board">
             <tbody>
@@ -32,12 +32,13 @@
             </tbody>
         </table>
     </div>
-<!--    <img th:src="@{/images/mine.png}" class="image-mine"/>-->
     <!-- 승리 및 패배 메시지 추가 -->
     <img th:if=${session.isVictory} src="/images/victory.jpg" class="result_image" alt="Victory Image">
     <img th:if=${session.isGameOver} src="/images/gameover.jpg" class="result_image" alt="GameOver Image">
 
-    <a href="/" class="button">때려치기</a>
+    <a th:if="${session.isVictory == false && session.isGameOver == false}" href="/" class="button">때려치기</a>
+    <a th:if="${session.isVictory}" href="/" class="button">패배자♡ 허접♡</a>
+    <a th:if="${session.isGameOver}" href="/" class="button">지뢰 더 밟으러 가기</a>
 </div>
 
     <!-- Hidden form for cell click event -->
