--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -9,7 +9,7 @@
 <div class="container">
     <h2 th:if="${session.isVictory == false && session.isGameOver == false}">지뢰밟기</h2>
     <h2 th:if="${session.isVictory}" style="color:red;">뭐하시는 거죠? 왜 지뢰를 안밟으세요?</h2>
-    <h2 th:if="${session.isGameOver}" style="color:green;">축하합니다! 성공적으로 지뢰를 밟았습니다!</h2>
+    <h2 th:if="${session.isGameOver}" style="color:green;">축하합니다! 성공적으로 지뢰를 밟았읍니다!</h2>
     <div class="board">
         <table class="board">
             <tbody>
