--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
 <div class="container">
     <img src="/images/explosion.png" alt="Title Image">
     <h1>지뢰밟기</h1>
-    <form action="/startGame" method="post">
+    <form action="/start" method="post">
         <div class="input-container">
             <label for="board-size-input">지뢰밭 크기</label>
             <input type="number" id="board-size-input" name="boardSize" min="3" max="15" required th:value="${boardSize}"
