--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
 <div class="container">
   <h1>에-라가 떴따</h1>
   <p th:text="${message}"></p>
-  <pre class="error-stacktrace" th:text="${stacktrace}"></pre>
+<!--  <pre class="error-stacktrace" th:text="${stacktrace}"></pre>-->
   <a href="/">나쁜거 하면 안돼요. 착한거 해요.</a>
 </div>
 </body>
