--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <span class="developer-info">Developer: Will Neiman (<a href="mailto:willneimann@gmail.com">willneimann@gmail.com</a>)&nbsp;&nbsp;
+    <span class="developer-info">Developer: Will Neiman (<a href="mailto:willneimann@gmail.com" class="email">willneimann@gmail.com</a>)&nbsp;&nbsp;
       <a href="https://github.com/WillNeiman/MineSweeper" target="_blank">
         <img src="/images/github-mark-white.png" alt="Github" class="github_icon">
       </a>
