--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>지뢰밟기</title>
     <link rel="stylesheet" th:href="@{/css/game.css}">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
 </head>
 <body>
 <div class="container">
@@ -66,5 +67,6 @@
         }
         /*]]>*/
     </script>
+<div th:replace="footer :: footer"></div>
 </body>
 </html>
