--- a/src/main/resources/static/css/game.css
+++ b/src/main/resources/static/css/game.css
@@ -37,7 +37,8 @@ h1 {
 }
 
 .button {
-    margin-bottom : 50px;
+    margin-top: 30px;
+    margin-bottom: 100px;
     font-size: 20px;
     padding: 10px 20px;
     border-radius: 5px;
