--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,11 +1,13 @@
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <footer class="footer">
-  <div class="container">
-    <span class="developer-info">Developer: Will Neiman (<a href="mailto:willneimann@gmail.com" class="email">willneimann@gmail.com</a>)&nbsp;&nbsp;
+  <link rel="stylesheet" th:href="@{/css/footer.css}">
+  <div class="footer_container">
+    <span class="developer_info">Developer: Will Neiman (<a href="mailto:willneimann@gmail.com" class="email">willneimann@gmail.com</a>)&nbsp;&nbsp;
       <a href="https://github.com/WillNeiman/MineSweeper" target="_blank">
         <img src="/images/github-mark-white.png" alt="Github" class="github_icon">
       </a>
     </span>
 
-    <p class="copyright-info">© 2023 Will Neiman. All rights reserved.</p>
+    <p class="copyright_info">© 2023 Will Neiman. All rights reserved.</p>
   </div>
 </footer>
