--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>지뢰밟기</title>
     <link rel="stylesheet" th:href="@{/css/main.css}">
-    <link rel="stylesheet" th:href="@{/css/footer.css}">
 </head>
 <body>
 <div class="container">
-    <img src="/images/explosion.png" alt="Title Image">
+    <img src="/images/explosion.png" alt="Title Image" class="title_image">
     <h1>지뢰밟기</h1>
     <form action="/start" method="post">
         <div class="input-container">
