--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,16 +1,16 @@
-.footer {
+.footer_container {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 60px; /* 푸터의 높이를 설정합니다. */
+    max-height: 60px; /* 푸터의 높이를 설정합니다. */
     background-color: #383838;
     color: #f7f7f7;
     text-align: center;
     padding: 10px 0;
 }
 
-.developer-info {
+.developer_info {
     padding: 10px;
     margin: 0;
 }
@@ -30,6 +30,6 @@
     font-weight: bold;
 }
 
-.copyright-info {
+.copyright_info {
     margin: 0;
 }
