--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2,11 +2,16 @@ body {
     background-color: #f7f7f7;
     font-family: Arial, sans-serif;
 }
+
 .container {
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.title_image {
+    margin-top: 30px;
 }
 
 h1 {
